# dunedataprep

./: CMakeLists.txt  CMakePresets.json  README.md
dunedataprep/CalData/: CMakeLists.txt  CalGausHFDUNE10kt_module.cc  CalGausHFDUNE35t_module.cc  CalWireDUNE10kt_module.cc  CalWireDUNE35t_module.cc  CalWireDUNEDPhase_module.cc  DeconvGausHFDUNE10kt_module.cc  DeconvGausHFDUNE35t_module.cc
dunedataprep/DataPrep/: CMakeLists.txt  README.md
dunedataprep/DataPrep/Module/: CMakeLists.txt  DataPrepByApaModule_module.cc  DataPrepModule_module.cc  README.md
dunedataprep/DataPrep/Service/: AdcSuppressSignalFindingService.h  AdcSuppressSignalFindingService_service.cc  CMakeLists.txt  ConfigurableAdcChannelDataCopyService.h  DuneDPhase3x1x1NoiseRemovalService.h  DuneDPhase3x1x1NoiseRemovalService_service.cc  DuneDPhaseDeconvolutionService.h  DuneDPhaseDeconvolutionService_service.cc  DuneDPhaseRoiBuildingService.h  DuneDPhaseRoiBuildingService_service.cc  DuneDeconvolutionService.h  DuneDeconvolutionService_service.cc  DuneRoiBuildingService.h  DuneRoiBuildingService_service.cc  InterpolatingAdcMitigationService.h  KeepAllRoiBuildingService.h  MedianPedestalService.h  MultiChannelNoiseRemovalService.h  MultiChannelNoiseRemovalService_service.cc  README.md  StandardAdcWireBuildingService.h  StandardRawDigitExtractService.h  StandardRawDigitExtractService_service.cc  StandardRawDigitPrepService.h  StandardRawDigitPrepService_service.cc  ThresholdNoiseRemovalService.h  ToolBasedRawDigitPrepService.h  ToolBasedRawDigitPrepService_service.cc  TpcToolBasedRawDigitPrepService.h  TpcToolBasedRawDigitPrepService_service.cc
dunedataprep/DataPrep/Service/test/: CMakeLists.txt  test_AdcSuppressSignalFindingService.cxx  test_ConfigurableAdcChannelDataCopyService.cxx  test_DuneDeconvolutionService.cxx  test_DuneRoiBuildingService.cxx  test_InterpolatingAdcMitigationService.cxx  test_KeepAllRoiBuildingService.cxx  test_MedianPedestalService.cxx  test_MultiChannelNoiseRemovalService.cxx  test_StandardAdcWireBuildingService.cxx  test_StandardRawDigitExtractService.cxx  test_StandardRawDigitPrepService.cxx  test_ThresholdNoiseRemovalService.cxx  test_ToolBasedRawDigitPrepService.cxx  test_TpcToolBasedRawDigitPrepService.cxx
dunedataprep/DataPrep/Tool/: AcdDigitReader.h  AcdDigitReader_tool.cc  AcdWireReader.h  AcdWireReader_tool.cc  Adc2dConvolute.h  AdcChannelDftPlotter.h  AdcChannelDftPlotter_tool.cc  AdcChannelDumper.h  AdcChannelFFT.h  AdcChannelFFT_tool.cc  AdcChannelMetric.h  AdcChannelMetric_tool.cc  AdcChannelPlotter.h  AdcChannelPlotter_tool.cc  AdcChannelSplitter.h  AdcChannelTrimmer.h  AdcCodeMitigator.h  AdcDPhase3x1x1LocalRoiBuilder.h  AdcDPhase3x1x1RoiBuilder.h  AdcDataDumper.h  AdcDataDumper_tool.cc  AdcDataPlotter.h  AdcDataPlotter_tool.cc  AdcDeconvoluteFFT.h  AdcDeconvoluteFFT_tool.cc  AdcDetectorPlotter.h  AdcDetectorPlotter_tool.cc  AdcEventViewer.h  AdcEventViewer_tool.cc  AdcKeepAllSignalFinder.h  AdcMultiThreshSignalFinder.h  AdcNoiseSignalFinder.h  AdcPedestalFitter.h  AdcPedestalFitter_tool.cc  AdcRangeSampleScaler.h  AdcRegularSignalFinder.h  AdcResultDumper.h  AdcResultDumper_tool.cc  AdcRoiShifter.h  AdcRoiSlicer.h  (+49 more)
dunedataprep/DataPrep/Tool/test/: CMakeLists.txt  test_AcdDigitReader.cxx  test_AcdWireReader.cxx  test_Adc2dConvolute.cxx  test_AdcChannelDftPlotter.cxx  test_AdcChannelDumper.cxx  test_AdcChannelFFT.cxx  test_AdcChannelMetric.cxx  test_AdcChannelPlotter.cxx  test_AdcChannelSplitter.cxx  test_AdcChannelTrimmer.cxx  test_AdcCodeMitigator.cxx  test_AdcDataDumper.cxx  test_AdcDataPlotter.cxx  test_AdcDeconvoluteFFT.cxx  test_AdcDetectorPlotter.cxx  test_AdcEventViewer.cxx  test_AdcKeepAllSignalFinder.cxx  test_AdcNoiseSignalFinder.cxx  test_AdcPedestalFitter.cxx  test_AdcRangeSampleScaler.cxx  test_AdcRegularSignalFinder.cxx  test_AdcResultDumper.cxx  test_AdcRoiShifter.cxx  test_AdcRoiSlicer.cxx  test_AdcRoiToTree.cxx  test_AdcRoiViewer.cxx  test_AdcSampleFiller.cxx  test_AdcSampleScaler.cxx  test_AdcThresholdSignalFinder.cxx  test_AdcTickModViewer.cxx  test_CnrByGroup.cxx  test_CnrGroupWeighted.cxx  test_DuneAdcSignalFinder.cxx  test_ExpTailPedRemover.cxx  test_ExpTailRemover.cxx  test_FclStickyCodeFlagger.cxx  test_FembLinearCalibration.cxx  test_FembMappedAdcModifier.cxx  test_FloatArrayGainCalibration.cxx  (+2 more)
dunedataprep/DataPrep/TpcTool/: AdcToRoi2d.h  CMakeLists.txt  README.md  Roi2dToAdc.h  Tpc2dDeconvolute.h  TpcIsoDepRoi.h  TpcIsoDepRoi_tool.cc
dunedataprep/DataPrep/TpcTool/test/: CMakeLists.txt  test_AdcToRoi2d.cxx  test_Roi2dToAdc.cxx  test_Tpc2dDeconvolute.cxx
dunedataprep/DataPrep/Utility/: AdcMultiChannelPlotter.cc  AdcMultiChannelPlotter.h  CMakeLists.txt  DetectorChannelInfo.cc  DetectorChannelInfo.h  DpWctFrameConverter.cxx  DpWctFrameConverter.h  MathUtils.h  README.md  StickyCodeMetrics.h  TickModTreeData.cxx  classes.h  classes_def.xml
dunedataprep/DataPrep/Utility/test/: CMakeLists.txt  test_StickyCodeMetrics.cxx
dunedataprep/DataPrep/WctTool/: CMakeLists.txt  README.md
dunedataprep/DataPrep/WctTool/test/: CMakeLists.txt  test_wirecell.cxx
dunedataprep/DataPrep/fcl/: CMakeLists.txt  README.md  dataprep_dune.fcl  dataprep_tools.fcl  hdcb_dataprep_tools.fcl  iceberg_dataprep_tools.fcl  pdsp_dataprep_sequences.fcl  protodune_dataprep_tools.fcl  test_dataprep.fcl  vdcb1_tools.fcl  vdcb2_tools.fcl  vdcb_dataprep_sequences.fcl  vdcb_tools.fcl
dunedataprep/DataPrep/fcl/test/: CMakeLists.txt  test_tool_crpChannelFemb  test_tool_crpChannelFemb.cxx
ups/: product_deps
